--- a/.github/workflows/read_body.yml
+++ b/.github/workflows/read_body.yml
@@ -39,7 +39,7 @@ jobs:
           repository: ${{ fromJson(steps.request.outputs.data).head.repo.full_name }}
           ref: ${{ fromJson(steps.request.outputs.data).head.sha }}
     
-      - name: echo
+      - name: print body
         run: |
           echo ${{ github.event.comment.body }}
           echo ${{ github.event.pull_request.title }}
