--- a/.github/workflows/test-slefhost.yml
+++ b/.github/workflows/test-slefhost.yml
@@ -16,6 +16,10 @@ jobs:
     runs-on: run-test-win01
 
     steps:
+      - name: echo
+        run:
+          echo $GITHUB_EVENT_PATH
+
       - uses: octokit/request-action@v2.x
         id: find_pull_request
         with:
