--- a/.github/workflows/test-slefhost.yml
+++ b/.github/workflows/test-slefhost.yml
@@ -25,6 +25,7 @@ jobs:
         if: github.event_name == 'issue_comment'
         run: |
           echo "pr_number=${{ github.event.issue.number }}" >> $GITHUB_ENV
+          echo ${{ env.pr_number }}
 
       - name: get pull_request(issue)
         id: find_pull_request
