--- a/.github/workflows/test-slefhost.yml
+++ b/.github/workflows/test-slefhost.yml
@@ -18,13 +18,15 @@ jobs:
     steps:
       - name: get pr number
         if: github.event_name != 'issue_comment'
+        shell: pwsh
         run: |
-          echo "::set name=pr_number::${{ github.event.pull_request.number }}"
+          Write-Output "::set-env name=pr_number::${{ github.event.pull_request.number }}"
 
       - name: get pr number(comment)
         if: github.event_name == 'issue_comment'
+        shell: pwsh
         run: |
-          echo "::set name=pr_number::${{ github.event.issue.number }}"
+          Write-Output "::set-env name=pr_number::${{ github.event.issue.number }}"
 
       - name: echo
         run: |
@@ -34,7 +36,7 @@ jobs:
         id: find_pull_request
         uses: octokit/request-action@v2.x
         with:
-          route: GET /repos/cocos/cocos-engine/pulls/${env.pr_number}
+          route: GET /repos/cocos/cocos-engine/pulls/$env:pr_number
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
