--- a/.github/workflows/test-slefhost.yml
+++ b/.github/workflows/test-slefhost.yml
@@ -18,35 +18,23 @@ jobs:
     steps:
       - name: get pr number
         if: github.event_name != 'issue_comment'
-        shell: pwsh
-        run: |
-          echo "pr_number=${{ github.event.pull_request.number }}" >> $GITHUB_ENV
+        env: |
+          GITHUB_PR_NUMBER: ${{ github.event.pull_request.number }}
 
       - name: get pr number(comment)
         if: github.event_name == 'issue_comment'
-        shell: pwsh
-        run: |
-          echo "pr_number=${{ github.event.issue.number }}" >> $GITHUB_ENV
+        env: |
+          GITHUB_PR_NUMBER: ${{ github.event.issue.number }}
 
       - name: echo
         run: |
-          echo "${env.pr_number}"
-          echo "${pr_number}"
-      - name: PowerShell script
-        # You may pin to the exact commit or the version.
-        # uses: Amadevus/pwsh-script@25a636480c7bc678a60bbf4e3e5ac03aca6cf2cd
-        uses: Amadevus/pwsh-script@v2.0.0
-        continue-on-error: true
-        with: 
-          # PowerShell script to execute in Actions-hydrated context
-          script: |
-            Write-Host $env:pr_number
-            
+          echo "${{ GITHUB_PR_NUMBER }}"
+
       - name: get pull_request
         id: find_pull_request
         uses: octokit/request-action@v2.x
         with:
-          route: GET /repos/cocos/cocos-engine/pulls/${env.pr_number}
+          route: GET /repos/cocos/cocos-engine/pulls/${{ GITHUB_PR_NUMBER }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -74,7 +62,7 @@ jobs:
       - name: 'Checkout engine'
         uses: actions/checkout@v2
         with:
-          ref: ${{ steps.parse_pull_request.outputs.pr_base_sha }}      
+          ref: ${{ steps.parse_pull_request.outputs.pr_base_sha }}
       - uses: actions/checkout@v2
         with:
           ref: ${{ steps.parse_pull_request.outputs.pr_head_sha }}
