--- a/.github/workflows/test-slefhost.yml
+++ b/.github/workflows/test-slefhost.yml
@@ -18,11 +18,13 @@ jobs:
     steps:
       - name: get pr number
         if: github.event_name != 'issue_comment'
+        run: echo "${{ github.event.pull_request.number }}"
         env: |
           GITHUB_PR_NUMBER: ${{ github.event.pull_request.number }}
 
       - name: get pr number(comment)
         if: github.event_name == 'issue_comment'
+        run: echo "${{ github.event.issue.number }}"
         env: |
           GITHUB_PR_NUMBER: ${{ github.event.issue.number }}
 
