--- a/.github/workflows/test-slefhost.yml
+++ b/.github/workflows/test-slefhost.yml
@@ -16,18 +16,18 @@ jobs:
     runs-on: run-test-win01
 
     steps:
-      - name: get pr number
+      - name: Get PR Number
         id: check_pr
         shell: pwsh
         run: |
-          if ("${{ github.event_name }}" -eq "issue_comment") {
+          if (${{ github.event_name }} -eq "issue_comment") {
             Write-Host "::set-output name=pr_number::${{ github.event.issue.number }}"
           }
           else {
             Write-Host "::set-output name=pr_number::${{ github.event.pull_request.number }}"
           }
 
-      - name: get pull_request
+      - name: Get PR Details
         id: find_pull_request
         uses: octokit/request-action@v2.x
         with:
@@ -36,7 +36,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Parse Pull Request
-        id: parse_pull_request
+        id: parse_pr
         shell: pwsh
         run: |
           $pull_request = @"
@@ -50,16 +50,19 @@ jobs:
           Write-Host "::set-output name=pr_head_sha::$($pull_request.head.sha)"
           Write-Host "::set-output name=pr_base_ref::$($pull_request.base.ref)"
           Write-Host "::set-output name=pr_base_sha::$($pull_request.base.sha)"
-      - name: Check pull request
+
+      - name: Check Job Parameter
         run: |
-          echo "${{ steps.parse_pull_request.outputs.pr_head_ref }}"
-          echo "${{ steps.parse_pull_request.outputs.pr_head_sha }}"
-          echo "${{ steps.parse_pull_request.outputs.pr_base_ref }}"
-          echo "${{ steps.parse_pull_request.outputs.pr_base_sha }}"
+          echo "${{ steps.parse_pr.outputs.pr_head_ref }}"
+          echo "${{ steps.parse_pr.outputs.pr_head_sha }}"
+          echo "${{ steps.parse_pr.outputs.pr_base_ref }}"
+          echo "${{ steps.parse_pr.outputs.pr_base_sha }}"
+
       - name: 'Checkout engine'
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
-          ref: ${{ steps.parse_pull_request.outputs.pr_base_sha }}
-      - uses: actions/checkout@v2
+          ref: ${{ steps.parse_pr.outputs.pr_base_ref }}
+
+      - uses: actions/checkout@v3
         with:
-          ref: ${{ steps.parse_pull_request.outputs.pr_head_sha }}
+          ref: ${{ steps.parse_pr.outputs.pr_head_sha }}
