--- a/.github/workflows/test-slefhost.yml
+++ b/.github/workflows/test-slefhost.yml
@@ -20,7 +20,7 @@ jobs:
         id: check_pr
         shell: pwsh
         run: |
-          if (${{ github.event_name }} -eq "issue_comment") {
+          if ("${{ github.event_name }}"" -eq "issue_comment") {
             Write-Host "::set-output name=pr_number::${{ github.event.issue.number }}"
           }
           else {
@@ -58,11 +58,12 @@ jobs:
           echo "${{ steps.parse_pr.outputs.pr_base_ref }}"
           echo "${{ steps.parse_pr.outputs.pr_base_sha }}"
 
-      - name: 'Checkout engine'
+      - name: 'Checkout engine(base)'
         uses: actions/checkout@v3
         with:
           ref: ${{ steps.parse_pr.outputs.pr_base_ref }}
 
+      - name: 'Checkout engine(commit)'
       - uses: actions/checkout@v3
         with:
           ref: ${{ steps.parse_pr.outputs.pr_head_sha }}
