--- a/.github/workflows/test-slefhost.yml
+++ b/.github/workflows/test-slefhost.yml
@@ -64,6 +64,6 @@ jobs:
           ref: ${{ steps.parse_pr.outputs.pr_base_ref }}
 
       - name: 'Checkout engine(commit)'
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
         with:
           ref: ${{ steps.parse_pr.outputs.pr_head_sha }}
