--- a/.github/workflows/organization.yml
+++ b/.github/workflows/organization.yml
@@ -22,6 +22,7 @@ jobs:
           echo "${{ steps.get_check_code.outputs.http_code }}"    
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v2
+        token: ${{ secrets.GITHUB_TOKEN }}
         with:
           issue-number: 1111
           body: |
