--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,9 +18,7 @@ jobs:
           IAM_ENDPOINT="https://iam.myhuaweicloud.com/v3/auth/tokens"  
           DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")  
           PAYLOAD="{\"auth\":{\"identity\":{\"methods\":[\"aksk\"],\"aksk\":{\"access\":{\"key\":\"$AK\"},\"secret\":{\"key\":\"$SK\"}}},\"scope\":{\"project\":{\"id\":\"$PROJECT_ID\"}}}}"  
-          IAM_RESPONSE=$(curl -si -X POST "$IAM_ENDPOINT" \  
-            -H "Content-Type: application/json" \  
-            -d "$PAYLOAD")  
+          IAM_RESPONSE=$(curl -si -X POST "$IAM_ENDPOINT" \  -H "Content-Type: application/json" \  -d "$PAYLOAD")  
           IAM_TOKEN=$(echo "$IAM_RESPONSE" | grep X-Subject-Token: | awk '{print $2}' | tr -d '\r')  
           echo "IAM_TOKEN=$IAM_TOKEN" >> $GITHUB_ENV  
           if [ -z "$IAM_TOKEN" ]; then  
