--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,8 +12,8 @@ jobs:
   
       - name: Get Huawei Cloud IAM Token  
         run: |  
-          AK="CTGTG9HCVI6DJQEF3D22"  
-          SK="AiBUnJUpimPVuDBB6JkRBCOVe2ArYhsSgVc1rthv"  
+          AK="${{ secrets.HUAWEI_CLOUD_ACCESS_KEY }}"  
+          SK="${{ secrets.HUAWEI_CLOUD_SECRET_KEY }}"  
           PROJECT_ID="05b60443220026ee2f8fc00ec8c01c7a"  
           IAM_ENDPOINT="https://iam.myhuaweicloud.com/v3/auth/tokens"  
           DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")  
@@ -26,7 +26,7 @@ jobs:
           if [ -z "$IAM_TOKEN" ]; then  
             echo "Failed to get IAM token"  
             exit 1  
-          fi 
+          fi  
   
       - name: Refresh CDN Cache  
         run: |  
