--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,19 +11,20 @@ jobs:
         uses: actions/checkout@v2  
   
       - name: Get Huawei Cloud IAM Token  
-        run: |  
-          AK="${{ secrets.HUAWEI_CLOUD_ACCESS_KEY }}"  
-          SK="${{ secrets.HUAWEI_CLOUD_SECRET_KEY }}"  
-          PROJECT_ID="05b60443220026ee2f8fc00ec8c01c7a"  
-          IAM_ENDPOINT="https://iam.myhuaweicloud.com/v3/auth/tokens"  
-          PAYLOAD="{\"auth\":{\"identity\":{\"methods\":[\"aksk\"],\"aksk\":{\"access\":{\"key\":\"$AK\"},\"secret\":{\"key\":\"$SK\"}}},\"scope\":{\"project\":{\"id\":\"$PROJECT_ID\"}}}}"  
-          IAM_RESPONSE=$(curl -si -X POST "$IAM_ENDPOINT" \  
-            -H "Content-Type: application/json" \  
-            -d "$PAYLOAD")  
-          IAM_TOKEN=$(echo "$IAM_RESPONSE" | grep X-Subject-Token: | awk '{print $2}' | tr -d '\r')  
-          echo "IAM_TOKEN=$IAM_TOKEN" >> $GITHUB_ENV  
-          if [ -z "$IAM_TOKEN" ]; then  
-            echo "Failed to get IAM token"  
+        run: |
+          AK="${{ secrets.HUAWEI_CLOUD_ACCESS_KEY }}"
+          SK="${{ secrets.HUAWEI_CLOUD_SECRET_KEY }}"
+          PROJECT_ID="05b60443220026ee2f8fc00ec8c01c7a"
+          IAM_ENDPOINT="https://iam.myhuaweicloud.com/v3/auth/tokens"
+          DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
+          PAYLOAD="{\"auth\":{\"identity\":{\"methods\":[\"aksk\"],\"aksk\":{\"access\":{\"key\":\"$AK\"},\"secret\":{\"key\":\"$SK\"}}},\"scope\":{\"project\":{\"id\":\"$PROJECT_ID\"}}}}" 
+          IAM_RESPONSE=$(curl -si -X POST "$IAM_ENDPOINT" \
+            -H "Content-Type: application/json" \
+            -d "$PAYLOAD")
+          IAM_TOKEN=$(echo "$IAM_RESPONSE" | grep X-Subject-Token: | awk '{print $2}' | tr -d '\r\n')
+          echo "IAM_TOKEN=$IAM_TOKEN" >> $GITHUB_ENV
+          if [ -z "$IAM_TOKEN" ]; then
+            echo "Failed to get IAM token"
             exit 1  
           fi  
   
