--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,38 +6,47 @@ on:
 jobs:  
   refresh-cdn:  
     runs-on: ubuntu-latest  
+  
     steps:  
       - name: Checkout code  
         uses: actions/checkout@v2  
   
-      - name: Get Huawei Cloud IAM Token  
+      - name: Get Huawei Cloud IAM Token and Refresh CDN Cache  
         env:  
-          USERNAME: ${{ secrets.HUAWEI_CLOUD_USERNAME }}  
-          PASSWORD: ${{ secrets.HUAWEI_CLOUD_PASSWORD }}  
-          DOMAIN_NAME: ${{ secrets.HUAWEI_CLOUD_DOMAIN_NAME }}  
-          PROJECT_ID: ${{ secrets.HUAWEI_CLOUD_PROJECT_ID }}  
-          IAM_ENDPOINT: https://iam.myhuaweicloud.com/v3/auth/tokens  
+          AK: ${{ secrets.HUAWEI_CLOUD_ACCESS_KEY }}  
+          SK: ${{ secrets.HUAWEI_CLOUD_SECRET_KEY }}  
+          PROJECT_ID: "05b60443220026ee2f8fc00ec8c01c7a"  
+          IAM_ENDPOINT: "https://iam.myhuaweicloud.com/v3/auth/tokens"  
+          CDN_ENDPOINT: "https://cdn.myhuaweicloud.com/v1.0/cdn/content/refresh-tasks"  
         run: |  
-          PAYLOAD="{\"auth\":{\"identity\":{\"methods\":[\"password\"],\"password\":{\"user\":{\"name\":\"$USERNAME\",\"password\":\"$PASSWORD\",\"domain\":{\"name\":\"$DOMAIN_NAME\"}}}},\"scope\":{\"project\":{\"id\":\"$PROJECT_ID\"}}}}"  
+          PAYLOAD="{\"auth\":{\"identity\":{\"methods\":[\"aksk\"],\"aksk\":{\"access\":{\"key\":\"$AK\"},\"secret\":{\"key\":\"$SK\"}}},\"scope\":{\"project\":{\"id\":\"$PROJECT_ID\"}}}}"  
+            
+          # 发送请求并打印完整的响应头部信息  
           IAM_RESPONSE=$(curl -si -X POST "$IAM_ENDPOINT" \
             -H "Content-Type: application/json" \
             -d "$PAYLOAD")
-          IAM_TOKEN=$(echo "$IAM_RESPONSE" | grep X-Subject-Token: | awk '{print $2}' | tr -d '\r\n')  
-          if [ -z "$IAM_TOKEN" ]; then  
-            echo "Failed to get IAM token"  
+          echo "IAM_RESPONSE headers:"
+          echo "$IAM_RESPONSE" | head -n 20  # 打印前20行响应头部信息  
+              
+          # 提取IAM令牌  
+          IAM_TOKEN=$(echo "$IAM_RESPONSE" | grep -Fi 'X-Subject-Token' | awk '{print $2}' | tr -d '\r\n')  
+          if [ -z "$IAM_TOKEN" ]; then
+            echo "Failed to get IAM token"
+            echo "Full response:"  
+            echo "$IAM_RESPONSE"  # 打印完整响应信息以便调试  
             exit 1  
           fi  
+              
+          # 如果IAM令牌提取成功  
           echo "IAM_TOKEN=$IAM_TOKEN"  
-  
-      - name: Refresh CDN Cache  
-        env:  
-          CDN_ENDPOINT: https://cdn.myhuaweicloud.com/v1.0/cdn/content/refresh-tasks  
-          IAM_TOKEN: ${{ steps.get-token.outputs.IAM_TOKEN }}
-        run: |  
-          CDN_PAYLOAD="{\"refresh_task\":{\"type\":\"file\",\"urls\":[\"https://example.com/path/to/file\"]}}"
+              
+          # 构建刷新CDN缓存的请求负载  
+          CDN_PAYLOAD="{\"refresh_task\":{\"type\":\"file\",\"urls\":[\"https://docs.cocos.com/\"]}}"  
+              
+          # 发送刷新CDN缓存的请求  
           CDN_RESPONSE=$(curl -si -X POST "$CDN_ENDPOINT" \
             -H "Content-Type: application/json" \
             -H "X-Auth-Token: $IAM_TOKEN" \
             -d "$CDN_PAYLOAD")
-          echo "$CDN_RESPONSE"  
-
+          echo "CDN_RESPONSE:"  
+          echo "$CDN_RESPONSE" | head -n 20  # 打印前20行响应信息  
