--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -23,19 +23,19 @@ jobs:
           $pr_head_sha = $pull_request.head.sha  
           $pr_base_ref = $pull_request.base.ref  
           $pr_base_sha = $pull_request.base.sha  
-          # $pr_updated_at = [datetime]::Parse($pull_request.updated_at)
+          $pr_updated_at = [datetime]::Parse($pull_request.updated_at)
           $last_update_date_str = "${{ env.last_update_date }}"  
-          # if ($last_update_date_str) {  
-          #     $last_update_date = [datetime]::Parse($last_update_date_str)  
-          # } else {  
-          #     # Defaults to a date before the current time  
-          #     $last_update_date = [datetime]::MinValue  
-          # }  
+          if ($last_update_date_str) {  
+              $last_update_date = [datetime]::Parse($last_update_date_str)  
+          } else {  
+              # Defaults to a date before the current time  
+              $last_update_date = [datetime]::MinValue  
+          }  
   
-          # if ($pr_updated_at -gt $last_update_date) {  
-          #      Write-Host "PR is updated after the last update date. Exiting..."  
-          #      exit 1  
-          # } 
+          if ($pr_updated_at -gt $last_update_date) {  
+               Write-Host "PR is updated after the last update date. Exiting..."  
+               exit 1  
+          } 
           #Output extracted information into GitHub Actions parameters
           echo "pr_html_url=$pr_html_url" | Out-File -Append -FilePath $env:GITHUB_OUTPUT  
           echo "pr_author=$pr_author" | Out-File -Append -FilePath $env:GITHUB_OUTPUT  
